// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<App
  loading={false}
>
  <t
    primaryAction={
      Object {
        "Component": [Function],
        "content": "Create Template",
        "to": "/templates/create",
      }
    }
    title="Templates"
  />
  <Connect(ReduxForm) />
  <TableCollection
    getRowData={[Function]}
    headerComponent={<TableHeader />}
    pagination={true}
    rows={
      Array [
        Object {
          "name": "Temp 1",
        },
        Object {
          "name": "Temp 2",
        },
      ]
    }
  />
</App>
`;

exports[`renders empty state 1`] = `
<App>
  <t
    action={
      Object {
        "Component": [Function],
        "content": "Create Template",
        "to": "/templates/create",
      }
    }
    title="Manage your email templates"
  >
    <p>
      Build, test, preview and send your transmissions.
    </p>
  </t>
</App>
`;

exports[`renders errors when present 1`] = `
<App
  loading={false}
>
  <t
    primaryAction={
      Object {
        "Component": [Function],
        "content": "Create Template",
        "to": "/templates/create",
      }
    }
    title="Templates"
  />
  <ApiErrorBanner
    errorDetails="Uh oh! It broke. "
    message="Sorry, we seem to have had some trouble loading your templates."
    reload={[Function]}
  />
</App>
`;
